<resources>
    <string name="app_name">GroupSports</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="upload_training">Upload training</string>
    <string name="my_highlights">My highlights</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share_highlights">Share highlights</string>
    <string name="chat_with_coach">Chat with coach</string>
    <string name="last_updates">Last updates</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="today_session">Today Session</string>
    <string name="my_athletes">My Athletes</string>
    <string name="my_teams">My Teams</string>
    <string name="assistance">Assistance</string>
    <string name="workplan">Workplan</string>
    <string name="binnacle">Binnacle</string>
    <string-array name="Intensities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="array_disciplines">
        <item>Velocista</item>
        <item>Saltos de valla</item>
    </string-array>
    <string name="title_activity_main_coach">MainCoachActivity</string>
    <string name="athlete">Athlete</string>
    <string name="coach">Coach</string>
    <string name="categories">Categories</string>
    <string name="add_athlete">Add Athlete</string>
    <string name="athlete_name">Athlete name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="add">Add</string>
    <string name="register">Register</string>
    <string name="username_desc">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="cellphone_number">Cellphone number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="register_athlete">Register athlete</string>
    <string name="add_athlete_to_my_team">Add athlete to my team</string>
    <string name="register_only">Register</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="a"> to </string>
    <string name="no_athletes">There are no athletes in this category</string>
    <string name="connection_error">Connection error</string>
    <string name="no_athletes_for_coach">There are no athletes for the coach</string>
    <string name="no_training_plans">There are no training plans registered</string>
    <string name="no_sessions_today">There are no sessions for this day</string>
    <string name="add_training_plan">Add training plan</string>
    <string name="training_plan_name">Training Plan Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="no_mesocycles_registered">No mesocycles registered</string>
    <string name="choose_athlete">Choose athlete</string>
    <string name="delete">Delete</string>
    <string name="first_register_an_athlete">First register an athlete</string>
    <string name="edit_training_plan">Edit training plan</string>
    <string name="edit">Edit</string>
    <string name="mesocycle_type">Mesocycle type</string>
    <string name="add_mesocycle">Add Mesocycle</string>
    <string name="no_weeks_registered">No weeks registered</string>
    <string name="edit_mesocycle">Edit mesocycle</string>
    <string name="week_type">Week type</string>
    <string name="activity">Activity</string>
    <string name="add_week">Add week</string>
    <string name="new_session">Add session</string>
    <string name="title_activity_athlete_detail">AthleteDetailActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_test_added">No test added</string>
    <string name="speed_test">Speed test</string>
    <string name="send">Send</string>
    <string name="mood_test">Mood test</string>
    <string name="mood">Mood</string>
    <string name="last_moods">Last moods</string>
    <string name="there_are_no_announces">No announces</string>
    <string name="no_moods">No moods</string>
    <string name="last_announcements">Last announcements</string>
    <string name="my_announcements">My announcements</string>
    <string name="social">Social</string>
    <string name="atletasdata">atleta1\natleta2\natleta3\natleta4</string>
    <string name="see_more">SEE MORE</string>
    <string name="add_announcement">Add announcement</string>
    <string name="title">Title</string>
    <string name="there_are_no_entries_for_this_session_s_binnacle">there are no entries for this session\'s binnacle</string>
    <string name="add_binnacle_entry">Add binnacle entry</string>
    <string name="detalle">Detail</string>
    <string name="quizzes">Quizzes</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="quiz_title">Quiz title</string>
    <string name="choose_athletes">Choose athletes</string>
    <string name="question">Question</string>
    <string name="add_question">Add Question</string>
    <string name="send_quiz">Send Quiz</string>
    <string name="back_to_questions">Back to questions</string>
    <string name="there_are_no_quizzes_for_this_day">There are no quizzes for this day</string>
    <string name="there_are_new_quizzes">You have new quizzes</string>
    <string name="replay">Replay</string>
    <string name="last_quizzes">Last quizzes</string>
    <string name="reply_quiz">Reply quiz</string>
    <string name="reply">Reply</string>
    <string name="answer">Answer</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height</string>
    <string name="body_span">Body Span</string>
    <string name="leg_length">Leg Length</string>
    <string name="half_squat_to_floor">Half Squat To Floor</string>
    <string name="shirt_size">Shirt Size (S, M, L)</string>
    <string name="pants_size">Pants Size (S, M, L)</string>
    <string name="footwear_size">Footwear Size (S, M, L)</string>
    <string name="meters">Meters</string>
    <string name="time_in_seconds">Time in seconds</string>
    <string name="shot_put_test">Shot Put Test</string>
    <string name="distance_in_meters">Distance in meters</string>
    <string name="weight_before_session">Weight before session (kg)</string>
    <string name="weight_after_session">Weight after session (kg)</string>
    <string name="there_are_no_weight_test_for_this_session">There are no weight test for this session</string>
    <string name="add_weight_test">Add weight test</string>
    <string name="wingspan">Wingspan</string>
    <string name="body_fat">% Body Fat</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="body_lean">% Body Lean</string>
    <string name="add_anthropometric_test">Add anthropometric test</string>
    <string name="size_s_m_l">Size (S, M, L)</string>
    <string name="wingspan_2">Wingspan</string>
    <string name="add_saltability_test">Add saltability test</string>
    <string name="saltability_type">Saltability type</string>
    <string name="add_strength_test">Add strength test</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="seconds">Seconds</string>
    <string name="weakness">Weakness</string>
    <string name="threats">Threats</string>
    <string name="strengths">Strengths</string>
    <string name="opportunities">Opportunities</string>
    <string name="no_foda_items">No FODA items</string>
    <string name="add_achievement">Add achievement</string>
    <string name="place">Place</string>
    <string name="times">Times</string>
    <string name="competition_name">Competition name</string>
    <string name="options">Options</string>
    <string name="my_coachs">My coachs</string>
    <string name="statistics">Statistics</string>
    <string name="my_schedule">My schedule</string>
    <string name="title_activity_coach_detail">CoachDetailActivity</string>
    <string name="add_cv_detail">Add CV detail</string>
    <string name="specialty_title">Specialty title</string>
    <string name="date_today">Date (Today)</string>
</resources>