<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_last_updates"
            android:icon="@drawable/ic_notifications"
            android:title="@string/last_announcements" />
        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/my_schedule" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_new_mesocycle_white"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_quizzes"
            android:icon="@drawable/ic_work_plan"
            android:title="@string/quizzes" />
        <item
            android:id="@+id/nav_mood_test"
            android:icon="@drawable/ic_mood_white"
            android:title="@string/mood_test" />
        <item
            android:id="@+id/nav_foda_test"
            android:icon="@drawable/ic_foda"
            android:title="Foda" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/upload_training"
            android:visible="false"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools"
            android:visible="false"/>
    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_highlights"
                android:visible="false"/>
            <item
                android:id="@+id/nav_my_coachs"
                android:icon="@drawable/ic_group"
                android:title="@string/my_coachs" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_exit"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
