<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/addAthleteTittleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:text="@string/add_cv_detail"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="30dp"
        android:hint="@string/specialty_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addAthleteTittleTextView">
        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/text_input_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/descriptionTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:hint="@string/detalle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextInputLayout">
        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/text_input_size" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/okButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextInputLayout" />

    <Button
        android:id="@+id/cancelButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@id/okButton"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextInputLayout" />

</android.support.constraint.ConstraintLayout>