<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/addAthleteTittleTextView"
        android:text="@string/add_athlete"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/athleteNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginStart="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@id/addAthleteTittleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/athleteNameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/athlete_name"
            android:lines="1"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/athleteNameTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@id/athleteNameTextInputLayout"
        app:layout_constraintEnd_toStartOf="@id/okButton"/>

</android.support.constraint.ConstraintLayout>