<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/big_margin">

    <TextView
        android:id="@+id/addAthleteTittleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_anthropometric_test"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mesocyleTypeTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addAthleteTittleTextView" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mesocycleTypeConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/selector_gradient_primary_accent_reverse"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mesocyleTypeTextview">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sizeSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dropdown" />
    </android.support.constraint.ConstraintLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/weightTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/weight"
        app:layout_constraintEnd_toStartOf="@+id/wingspanTextInputLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mesocycleTypeConstraintLayout">

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:lines="1"
            android:textSize="@dimen/text_input_size"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wingspanTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/wingspan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/weightTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/mesocycleTypeConstraintLayout">

        <EditText
            android:id="@+id/wingspanEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:lines="1"
            android:textSize="@dimen/text_input_size"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bodyFatPercentageTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/body_fat"
        android:layout_marginEnd="@dimen/big_margin"
        app:layout_constraintEnd_toStartOf="@+id/leanBodyPercentageTextInputLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wingspanTextInputLayout">

        <EditText
            android:id="@+id/bodyFatPercentageEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:lines="1"
            android:maxLength="3"
            android:textSize="@dimen/text_input_size"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/leanBodyPercentageTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/body_lean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bodyFatPercentageTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/wingspanTextInputLayout">

        <EditText
            android:id="@+id/leanBodyPercentageEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:lines="1"
            android:maxLength="2"
            android:textSize="@dimen/text_input_size"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/okButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leanBodyPercentageTextInputLayout" />

    <Button
        android:id="@+id/cancelButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@id/okButton"
        app:layout_constraintTop_toBottomOf="@id/leanBodyPercentageTextInputLayout" />

</android.support.constraint.ConstraintLayout>